style/todo.css
.todo-wrapper {
	height: 100%;
	margin: 1rem 0 1rem 1rem;
	padding-right: 0.5rem;
	width: clamp(250px, 35vw, 30vw);
	overflow-y: scroll;
	scrollbar-color: var(--primary-color) var(--secondary-color);
}

.todo-wrapper h1,
.todo-wrapper h2 {
	font-family: var(--primary-font);
	color: var(--text-color-primary);
	width: 80%;
}

.todo-wrapper .header-date {
	text-transform: capitalize;
	font-family: var(--primary-font)
}

.todo-header-box {
	display: flex;
	justify-content: space-between;
}

.todo-add-btn {
	width: 2rem;
	height: 2rem;

	margin-right: 1rem;
	border: 3px solid var(--primary-color);
	border-radius: 50%;
	cursor: pointer;
}

.todo-add-icon {
	margin-top: 2px;
	color: var(--primary-color);
}

.todo-section-today,
.todo-section-upcoming,
.todo-section-completed {
	display: flex;
	justify-content: center;
	flex-direction: column;
	flex: 0;
	margin-top: 1rem;
	padding: 0.25rem 0.5rem;
	border-radius: 10px;
}

.todo-card {
	font-family: var(--primary-font);
	border-left: solid 5px var(--primary-color) !important;
	border: solid 1px var(--border-color-faded);
	border-radius: 10px;

	box-shadow: 0 0 1px 1px var(--border-color-faded);

	padding: 0.5rem 0.5rem;
	margin: 0.5rem 0;

	position: relative;
}

.todo-card p {
	margin: 0.5rem 0;
	;
}

.todo-card .todo-description {
	width: 80%;
}

.todo-card .todo-time-box {
	display: flex;
}

.todo-card .todo-time-box p {
	margin: 0 1px
}

.todo-card .todo-check {
	position: absolute;
	right: 1rem;
	top: 10%;
	width: 1.5rem;
	height: 1.5rem;
}

.todo-card .todo-delete-btn {
	position: absolute;
	right: 1rem;
	bottom: 10%;
	cursor: pointer;
}

.todo-card .todo-delete-icon {
	color: var(--danger-color);
}

@media(max-width: 767px) {
	.todo-wrapper {
		display: none;
		width: 100%;
		margin: 0;
		margin-bottom: 1rem;
		padding: 0.5rem;
	}

}

.todo-form-section {
	display: flex;
	align-items: center;
	justify-content: center;

	position: absolute;
	top: 0;
	z-index: 1111;

	width: 100%;
	height: 100%;
	background-color: var(--base-color);

	border-left: 1px solid var(--border-color-primary);
}

.todo-form-back-btn {
	width: 2rem;
	height: 2rem;

	border: 3px solid var(--primary-color);
	border-radius: 50%;

	position: absolute;
	top: 1rem;
	left: 1rem;

	cursor: pointer;
}

.todo-form-back-icon {
	color: var(--primary-color);
	font-size: 10rem;
	margin-top: 1px;
}

.todo-form {
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
	width: clamp(250px, 85%, 90%);
	height: fit-content;
	padding: 2.5rem 0;

	background-color: var(--secondary-color);
	border: 1px solid var(--border-color-primary);
	border-radius: 15px;
	gap: 1rem;
	animation: fadeInUp 0.2s ease-in;


	h2 {
		margin-bottom: 1rem;
		color: var(--primary-color);
		text-transform: uppercase;
		font-family: var(--primary-font);
	}

	hr {
		width: clamp(250px, 50%, 100rem);
		background: linear-gradient(to right, transparent, var(--primary-color), transparent);
		border: none;
		height: 2px;
	}

	input,
	textarea {
		width: clamp(250px, 50%, 100rem);
		padding: 0.5rem;
		color: var(--text-color-faded);
		border: 1px solid var(--border-color-faded);
		border-radius: 10px;
		box-shadow: 1px 1px rgba(0, 0, 0, 0.1)
	}

	label {
		width: clamp(250px, 50%, 100rem);
		padding: 0.5rem;

		color: var(--neutral-color);
		font-family: var(--primary-font);
		font-weight: bold;
	}

	button {
		background-color: var(--primary-color);
		color: var(--base-color);
		font-weight: bold;
		padding: 0.5rem 1rem;
		border: 1px solid var(--border-color-faded);
		border-radius: 10px;
		cursor: pointer;
	}
}

@keyframes fadeInUp {
	from {
		opacity: 0;
		transform: translateY(40px);
	}

	to {
		opacity: 1;
		transform: translateY(0);
	}
}

@media(min-width: 767px) {
	.todo-form {
		width: clamp(600px, 40%, 100rem);
	}
}

@media(max-height: 800px) {
	.todo-form {
		gap: 0.5rem;
	}
}

